...
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                >

                    <net.dankito.deepthought.android.views.FullscreenWebView
                        android:id="@+id/wbvwContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                    />

                    <LinearLayout
                        android:id="@+id/lytFullscreenWebViewOptionsBar"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/fullscreen_web_view_options_bar_button_height"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
...
