...
                android:layout_marginBottom="@dimen/view_edit_entity_field_horizontal_line_when_edit_text_not_shown_margin_bottom"
                android:background="@color/entity_field_divider_color"
                android:visibility="gone"
            />

            <EditText
                android:id="@+id/edtxtEntityFieldValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lytPreview"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/btnEntityFieldAction"
...
            android:layout_height="@dimen/view_edit_entity_field_search_results_list_margin_top"
            android:background="?attr/editEntityActivityBackground"
            android:visibility="gone"
        />

        <net.dankito.utils.android.ui.view.MaxHeightRecyclerView
            android:id="@+id/rcySearchResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:visibility="gone"
        />

...
