<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnApplyHtmlChanges"
        app:showAsAction="always"
        android:orderInCategory="100"
        android:icon="@drawable/ic_check_white_48dp"
    />

</menu>