<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnShareEntry"
        app:showAsAction="always"
        android:title="@string/action_share"
        android:icon="@android:drawable/ic_menu_share"
    />

    <item
        android:id="@+id/mnEditEntry"
        app:showAsAction="always"
        android:title="@string/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
    />

    <item
        android:id="@+id/mnSaveEntry"
        app:showAsAction="always"
        android:title="@string/action_save"
        android:icon="@android:drawable/ic_menu_save"
    />

</menu>