...
        android:icon="@drawable/ic_read_later_article_action"
        app:actionLayout="@layout/contextual_action_mode_item_action_layout"
        android:visible="false"
    />

    <item
        android:id="@+id/mnSaveItem"
        app:showAsAction="always"
        android:orderInCategory="500"
        android:title="@string/action_save"
        android:icon="@drawable/ic_save_white_48dp"
        app:actionLayout="@layout/contextual_action_mode_item_action_layout"
        android:visible="false"
...
