...
            android:layout_marginStart="@dimen/activity_edit_item_field_margin_left"
            android:layout_marginRight="@dimen/activity_edit_item_field_margin_right"
            android:layout_marginEnd="@dimen/activity_edit_item_field_margin_right"
        >

            <net.dankito.deepthought.android.views.EditItemSourceField
                android:id="@+id/lytSourcePreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            />

            <net.dankito.deepthought.android.views.EditEntityField
                android:id="@+id/lytSummaryPreview"
...
